# frames-ui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cc
assets/shaders/: fragment.glsl  vertex.glsl
include/frames/: Utils.h
include/frames/Graphics/: Color.h  Context.h  DrawCommand.h  DrawList.h  Vector.h  Vertex.h
include/frames/Graphics/Font/: FontDescriptor.h  TextureFontDescriptor.h
include/frames/Graphics/OpenGL/: ContextOpenGL.h  RendererOpenGL.h  ShaderOpenGL.h  TextureOpenGL.h
include/frames/Graphics/Primitives/: Circle.h  Line.h  Point.h  Primitive.h  Rectangle.h
include/frames/Graphics/SpriteSheet/: Sprite.h  SpriteSheet.h
include/frames/Graphics/Texture/: Sprite.h  Texture.h  TextureDescriptor.h
src/: CMakeLists.txt
src/Graphics/: Context.cc  DrawList.cc
src/Graphics/OpenGL/: ContextOpenGL.cc  RendererOpenGL.cc  ShaderOpenGL.cc
tests/: CMakeLists.txt
